--- a/dubbo-provider/src/main/resources/disconf.properties
+++ b/dubbo-provider/src/main/resources/disconf.properties
@@ -1,13 +1,13 @@
 #是否使用远程配置文件，true(默认)会从远程获取配置， false则直接获取本地配置
 disconf.enable.remote.conf=true
 #配置服务器的 HOST,用逗号分隔 ，示例：127.0.0.1:8000,127.0.0.1:8000
-disconf.conf_server_host=172.20.70.102:8081
+disconf.conf_server_host=config.infinitus.com.cn
 #版本号
 disconf.version=1.0.0
 #项目名称
 disconf.app=dubbo-provider-demo
 #环境
-disconf.env=local
+disconf.env=rd
 #忽略的分布式配置，用空格分隔
 disconf.ignore=
 #获取远程配置，重试时休眠时间，默认是5秒
